<resources>
    <string name="app_name">AppStoryDicoding</string>
    <string name="logo">LogoApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="greetings">Welcome to Story Apps</string>
    <string name="greetings_create_account">Let\'s create your account and share your story</string>
    <string name="name">Name</string>
    <string name="image_story">Image</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="empty">Story is Empty</string>
    <string name="add_story">Add Story</string>
    <string name="insert_image">"Please insert an Image"</string>
    <string name="invalid_email">Email format is invalid</string>
    <string name="validation_password">Password must contain at least 8 characters</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="validation_account">Already have an account?</string>
    <string name="empty_validation">Email and Password must be filled</string>
    <string name="name_empt_validation">Name must be filled</string>
    <string name="invalid_emailandpass">Email and Password Wrong</string>
    <string name="submit_button">Submit</string>
    <string name="input_email">Input Email</string>
    <string name="input_pass">Input Password</string>

</resources>